--- a/assignment1/assignment1.csproj
+++ b/assignment1/assignment1.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInterface.cs" />
-    <Compile Include="WineItemCollection.cs" />
+    <Compile Include="WineAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
