--- a/assignment1/packages.config
+++ b/assignment1/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net45" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net45" />
+  <package id="ReportGenerator" version="2.5.1" targetFramework="net45" />
 </packages>
