Removes char input and replaces with readLine and changes 'press' to 'enter'

--- a/assignment1/assignment1.csproj
+++ b/assignment1/assignment1.csproj
@@ -103,6 +103,7 @@
     <None Include="Beverage.edmx.diagram">
       <DependentUpon>Beverage.edmx</DependentUpon>
     </None>
+    <None Include="MakeTest.bat" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
